Fix css height spinner on mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -109,6 +109,9 @@ body:not(.staff) {
         left: 0;
         right: 0;
         top: 125px;
+        @media screen and (max-width: 450px) {
+          top: 70px;
+        }
         margin-left: auto;
         margin-right: auto;
     }
